# Graphic_computer

./: CMakeLists.txt  LICENSE  README.md  _GENERATE_VS2015_x64.bat
src/: CMakeLists.txt
src/Casa/: CMakeLists.txt  main.cpp
src/Cubos/: CMakeLists.txt  cubos.h  imageners.rar  main.cpp
src/Flor_2/: CMakeLists.txt  colors.h  main.cpp  shaders.h
src/cubo_final/: CMakeLists.txt  colors.h  cubos.h  fshader.fs  fshader_2.fs  main.cpp
