add_subdirectory( Tutorial_01 )
add_subdirectory( triangulo)
add_subdirectory( Casa)
add_subdirectory( Flor_1)
add_subdirectory( Flor_2)
add_subdirectory( Estrella)
add_subdirectory( hw0 )
add_subdirectory( hw1 )
add_subdirectory( cuboj )
add_subdirectory( cubo_final )
add_subdirectory( cubos )
add_subdirectory( cuboprueba )
add_subdirectory( Cubo2 )
add_subdirectory (Examen_parcial)